# R-TYPE

./: .clang-format  .gitattributes  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  Doxyfile  Makefile  README.md  README_DEV.md  build.sh  clean  package-lock.json  rfc_tcp.txt  rfc_tcp_lobby.txt  rfc_udp.txt
.githooks/: pre-push
.github/workflows/: ci.yml  mirror-nightly-to-main.yml
Client/include/: server.hpp
Client/src/: main.cpp
Observer/: demo.cpp  main.cpp
Observer/include/: Event.hpp  EventBus.hpp  IObserver.hpp  Observer.hpp
Server/: CMakeLists.txt
Server/include/: ATcpServer.hpp  AUdpServer.hpp  ClientState.hpp  GameLogic.hpp  GameManager.hpp  GameServer.hpp  GameServerLoop.hpp  GameSession.hpp  ITcpServer.hpp  IUdpServer.hpp  MessageQueue.hpp  MessageType.hpp  Player.hpp  Protocole.hpp  ServerLoop.hpp  StartServer.hpp  TcpServer.hpp  UdpMessageType.hpp  UdpProtocole.hpp  UdpServer.hpp
Server/include/core/: StartServer.hpp
Server/include/gamelogic/: GameLogic.hpp  GameSession.hpp
Server/include/network/messages/: ClientState.hpp  MessageQueue.hpp
Server/include/network/protocol/: Protocole.hpp  UdpMessageType.hpp  UdpProtocole.hpp
Server/include/network/tcp/: ITcpServer.hpp
Server/include/network/udp/: AUdpServer.hpp  UdpServer.hpp
Server/include/serverloop/: GameServerLoop.hpp
Server/src/: ClientState.cpp  GameLogic.cpp  GameLogicCombat.cpp  GameLogicEntities.cpp  GameLogicPlayer.cpp  GameLogicSnapshot.cpp  GameLogicSystems.cpp  GameManager.cpp  GameServer.cpp  GameServerLoop.cpp  GameSession.cpp  MessageQueue.cpp  Player.cpp  Protocole.cpp  ServerLoop.cpp  StartServer.cpp  Tcpserver.cpp  UdpProtocole.cpp  UdpServer.cpp  main.cpp
Server/src/core/: StartServer.cpp  main.cpp
Server/src/gamelogic/: GameLogic.cpp  GameLogicCombat.cpp  GameLogicEntities.cpp  GameLogicPlayer.cpp  GameLogicSnapshot.cpp  GameLogicSystems.cpp  GameSession.cpp
Server/src/network/messages/: ClientState.cpp  MessageQueue.cpp
Server/src/network/protocol/: Protocole.cpp  UdpProtocole.cpp
Server/src/network/tcp/: TcpServer.cpp
Server/src/network/udp/: UdpServer.cpp
Server/src/serverloop/: GameServerLoop.cpp
app/: CMakeLists.txt  Makefile
app/include/: accessibility_menu.hpp  audio_manager.hpp  boss_manager.hpp  connection_menu.hpp  enemy_manager.hpp  game.hpp  game_menu.hpp  key_bindings.hpp  keybindings_menu.hpp  level_selection_menu.hpp  lobby_browser_menu.hpp  lobby_menu.hpp  menu.hpp  options_menu.hpp  pause_menu.hpp  player_manager.hpp  powerup_manager.hpp  settings.hpp  tick_system.hpp
app/include/core/: Game.hpp  TickSystem.hpp  game.hpp  settings.hpp
app/include/game/: EnemyManager.hpp  PowerupManager.hpp
app/include/network/: ASIOSocket.hpp  NetworkCommandHandler.hpp  NetworkManager.hpp  PacketProcessor.hpp
app/include/render/: IRenderWindow.hpp  RenderFactory.hpp
app/include/render/sfml/: SFMLRenderAudio.hpp  SFMLRenderWindow.hpp
app/include/ui/: AccessibilityMenu.hpp  ConnectionMenu.hpp  GameMenu.hpp  KeybindingsMenu.hpp  LevelSelectionMenu.hpp  LobbyBrowserMenu.hpp  LobbyMenu.hpp  Menu.hpp  OptionsMenu.hpp  PauseMenu.hpp  accessibility_menu.hpp  connection_menu.hpp  game_menu.hpp  keybindings_menu.hpp  level_selection_menu.hpp  lobby_browser_menu.hpp  lobby_menu.hpp  menu.hpp  options_menu.hpp  pause_menu.hpp
app/src/: ASIOSocket.cpp  NetworkCommandHandler.cpp  NetworkManager.cpp  PacketProcessor.cpp  accessibility_menu.cpp  audio_manager.cpp  boss_manager.cpp  connection_menu.cpp  enemy_manager.cpp  game.cpp  game_menu.cpp  key_bindings.cpp  keybindings_menu.cpp  level_selection_menu.cpp  lobby_browser_menu.cpp  lobby_menu.cpp  main.cpp  menu.cpp  options_menu.cpp  pause_menu.cpp  player_manager.cpp  powerup_manager.cpp  tick_system.cpp
app/src/core/: Game.cpp  TickSystem.cpp  game.cpp  main.cpp  tick_system.cpp
app/src/game/: AudioManager.cpp  BossManager.cpp  EnemyManager.cpp  PlayerManager.cpp  PowerupManager.cpp  audio_manager.cpp  boss_manager.cpp  enemy_manager.cpp  player_manager.cpp  powerup_manager.cpp
app/src/network/: ASIOSocket.cpp  NetworkCommandHandler.cpp  NetworkManager.cpp  PacketProcessor.cpp
app/src/render/: RenderFactory.cpp
app/src/render/sfml/: SFMLRenderAudio.cpp  SFMLRenderWindow.cpp
app/src/ui/: AccessibilityMenu.cpp  ConnectionMenu.cpp  GameMenu.cpp  KeyBindings.cpp  KeybindingsMenu.cpp  LevelSelectionMenu.cpp  LobbyBrowserMenu.cpp  LobbyMenu.cpp  Menu.cpp  OptionsMenu.cpp  PauseMenu.cpp  accessibility_menu.cpp  connection_menu.cpp  game_menu.cpp  key_bindings.cpp  keybindings_menu.cpp  level_selection_menu.cpp  lobby_browser_menu.cpp  lobby_menu.cpp  menu.cpp  options_menu.cpp  pause_menu.cpp
ecs/: CMakeLists.txt  Makefile
ecs/include/: GameConstants.hpp  asset_helper.hpp  components.hpp  entity.hpp  lua_compat_fix.hpp  registery.hpp  sparse_array.hpp  systems.hpp  weapon_presets.hpp
ecs/include/network/: ANetworkManager.hpp  INetwork.hpp  ISocket.hpp  NetworkCommands.hpp  NetworkComponents.hpp  NetworkSystem.hpp
ecs/include/render/: IRenderAudio.hpp  IRenderWindow.hpp
ecs/src/: ANetworkManager.cpp  NetworkSystem.cpp  ai_movement_pattern.cpp  projectile_pattern.cpp  registery.cpp  systems.cpp  weapon.cpp
ecs/src/systems/: ai_input_system.cpp  audio_system.cpp  beam_system.cpp  collision_system.cpp  common.cpp  control_system.cpp  enemy_system.cpp  gravity_system.cpp  health_system.cpp  input_system.cpp  mario_systems.cpp  platform_collision_system.cpp  position_system.cpp  projectile_system.cpp  render_system.cpp  score_system.cpp  weapon_system.cpp
mario/: CMakeLists.txt  Makefile
mario/include/: mario_game.hpp
mario/src/: mario_animation.cpp  mario_controls.cpp  mario_enemies.cpp  mario_game_core.cpp  mario_main.cpp  mario_platforms.cpp  mario_player.cpp  mario_render.cpp
network/: CMakeLists.txt
network/include/: NetServer.hpp  NetServerApi.hpp
network/src/: NetEntry.cpp  NetServer.cpp
scripts/: README.md  ai_pattern.lua  enemy_spawn.lua  projectile_pattern.lua  weapon_fire.lua
tests/: CMakeLists.txt  example.test.cpp
(+2 files in other folders)
